--- a/Project/styles/style.css
+++ b/Project/styles/style.css
@@ -1,9 +1,8 @@
 
-  
 
 .namemarca{
 
-color: blue;
+color: rgb(255, 255, 255);
 border: 2px,  solid green;
 display: inline-block; /* Esto hace que el contenedor se ajuste al tamaño de su contenido */
 padding: 1%;
@@ -13,6 +12,9 @@ padding: 1%;
 
 
 .titulo1 {
+
+  background-color: rgb(0, 66, 165);
+
   float: left;
   border: 1px solid black; /* Añadir borde a cada título */
   padding: 10px; /* Añadir espacio dentro del borde */
@@ -20,6 +22,7 @@ padding: 1%;
 }
 
 .titulo2 {
+  background-color: rgb(0, 66, 165);
   float: left;
   border: 1px solid black; /* Añadir borde a cada título */
   padding: 10px; /* Añadir espacio dentro del borde */
@@ -34,12 +37,12 @@ padding: 1%;
 
 
   h3{
-
-
+    background-color: rgb(0, 66, 165);
     text-align: center;
- border-color: aqua;
+    color: rgb(255, 255, 255);
+ border-color: rgb(0, 0, 0);
  border-style: solid;
-  border-width: 0.1cm;
+  border-width: 0cm;
 
   }
 
