Co-authored-by: enmanuelpolanco0518@gmail.com <enmanuelpolanco0518@gmail.com>

--- a/Project/styles/style.css
+++ b/Project/styles/style.css
@@ -64,7 +64,7 @@ padding: 1%;
 margin: 0;
 padding: 0;
 box-sizing: border-box;
-font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
+font-family:sans-serif
 
 
 
