--- a/Project/styles/style.css
+++ b/Project/styles/style.css
@@ -268,7 +268,7 @@ a:hover {
   position: relative; /* Required for hover effect */
   width: 250px; /* Adjust width as needed */
   height: 300px; /* Adjust height as needed */
-  border: 1px solid #ccc;
+  background-color: #a30006;
   border-radius: 25px;
   overflow: hidden; /* Hide overflow when social links appear */
 }
