--- a/Project/styles/style.css
+++ b/Project/styles/style.css
@@ -282,7 +282,12 @@ h2{
   overflow: hidden; /* Hide overflow when social links appear */
 }
 
-.team-member{}
+.team-member{
+
+
+
+  
+}
 
 .creator-image {
   width: 100%;
