--- a/Project/styles/style.css
+++ b/Project/styles/style.css
@@ -252,12 +252,16 @@ a:hover {
 
 /*Apartado TEAM*/
 
+.container h1{
+  text-align: center;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
 .team-section {
   text-align: center;
   margin: 50px 0; /* Add spacing above and below the section */
 }
 
-h2{
+.team-section h2{
   background-color: #c03;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 35px;
