--- a/Project/styles/style.css
+++ b/Project/styles/style.css
@@ -257,6 +257,10 @@ a:hover {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 .team-section {
+  width: 250px; /* Adjust width as needed */
+  height: 300px;
+  background-color: #a30006;
+  border-radius: 35px;
   display: flex;
   text-align: center;
   margin: 60px 0; /* Add spacing above and below the section */
