--- a/Project/styles/style.css
+++ b/Project/styles/style.css
@@ -277,27 +277,12 @@ a:hover {
 
 /*Apartado Novedades*/
 
-.header {
-  background-color: #1c0113;
-  padding: 15px 0;
-}
-
-.header h1 {
-  font-size: 36px;
-  color: #DA1212;
-  margin-bottom: 10px;
-}
-
-.header p {
-  font-size: 18px;
-  margin-bottom: 30px;
-}
 
 
-body{
 
-  background-color: #6b0103;  
-}
+
+
+
 
 
 .imagen{
@@ -307,7 +292,7 @@ text-align: center;
 
 .container.section  {
 
-  background-color: #1c0113;
+  background-color: #a30006;
    padding: 10px ;
 
 }
@@ -323,17 +308,7 @@ text-align: center;
  
 }
 
-.section{
 
-  font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 0;
-  color: #ffffff;
-  width: 2000px;
-  max-width: 90%;
-  margin: 35px auto; 
-  text-align: center;
-}
 
 .contenido{
   font-family: Arial, sans-serif;
