--- a/Project/styles/style.css
+++ b/Project/styles/style.css
@@ -269,8 +269,13 @@ ul.space{
  
 }
 
-ul.space li{
+ul.space li:hover{
 
+  background: #0B2447;
+}
+
+ul.space li{
+transition: all 500ms ease;
   width: 20%;
 }
 
