--- a/Project/styles/style.css
+++ b/Project/styles/style.css
@@ -1,9 +1,12 @@
-.vacio{
 
-   color: #6b0103;
-   
-   
-   }
+
+
+/*Config pagina completa*//*Config pagina completa*//*Config pagina completa*//*Config pagina completa*//*Config pagina completa*/
+/*Config pagina completa*//*Config pagina completa*//*Config pagina completa*//*Config pagina completa*//*Config pagina completa*/
+/*Config pagina completa*//*Config pagina completa*//*Config pagina completa*//*Config pagina completa*//*Config pagina completa*/
+/*Config pagina completa*//*Config pagina completa*//*Config pagina completa*//*Config pagina completa*//*Config pagina completa*/
+/*Config pagina completa*//*Config pagina completa*//*Config pagina completa*//*Config pagina completa*//*Config pagina completa*/
+/*Config pagina completa*//*Config pagina completa*//*Config pagina completa*//*Config pagina completa*//*Config pagina completa*/
    
    body {
      font-family: Arial, sans-serif;
@@ -196,7 +199,17 @@
    }
 
 
-/*Apartado TEAM*/
+
+
+
+
+/*Apartado TEAM*//*Apartado TEAM*//*Apartado TEAM*//*Apartado TEAM*//*Apartado TEAM*//*Apartado TEAM*//*Apartado TEAM*/
+/*Apartado TEAM*//*Apartado TEAM*//*Apartado TEAM*//*Apartado TEAM*//*Apartado TEAM*//*Apartado TEAM*//*Apartado TEAM*/
+/*Apartado TEAM*//*Apartado TEAM*//*Apartado TEAM*//*Apartado TEAM*//*Apartado TEAM*//*Apartado TEAM*//*Apartado TEAM*/
+/*Apartado TEAM*//*Apartado TEAM*//*Apartado TEAM*//*Apartado TEAM*//*Apartado TEAM*//*Apartado TEAM*//*Apartado TEAM*/
+/*Apartado TEAM*//*Apartado TEAM*//*Apartado TEAM*//*Apartado TEAM*//*Apartado TEAM*//*Apartado TEAM*//*Apartado TEAM*/
+/*Apartado TEAM*//*Apartado TEAM*//*Apartado TEAM*//*Apartado TEAM*//*Apartado TEAM*//*Apartado TEAM*//*Apartado TEAM*/
+
 
 .container h1{
   text-align: center;
@@ -221,14 +234,17 @@
   margin: 70px 0;
 }
 
-/*Apartado Novedades*/
 
 
 
 
 
-
-
+/*Apartado Novedades*//*Apartado Novedades*//*Apartado Novedades*//*Apartado Novedades*//*Apartado Novedades*//*Apartado Novedades*/
+/*Apartado Novedades*//*Apartado Novedades*//*Apartado Novedades*//*Apartado Novedades*//*Apartado Novedades*//*Apartado Novedades*/
+/*Apartado Novedades*//*Apartado Novedades*//*Apartado Novedades*//*Apartado Novedades*//*Apartado Novedades*//*Apartado Novedades*/
+/*Apartado Novedades*//*Apartado Novedades*//*Apartado Novedades*//*Apartado Novedades*//*Apartado Novedades*//*Apartado Novedades*/
+/*Apartado Novedades*//*Apartado Novedades*//*Apartado Novedades*//*Apartado Novedades*//*Apartado Novedades*//*Apartado Novedades*/
+/*Apartado Novedades*//*Apartado Novedades*//*Apartado Novedades*//*Apartado Novedades*//*Apartado Novedades*//*Apartado Novedades*/
 
 
 .imagen{
